--- a/index.html
+++ b/index.html
@@ -3,29 +3,104 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mot de passe requis</title>
-    <script>
-        function checkPassword() {
-            const password = prompt("Entrez le mot de passe pour accéder au site :");
-            if (password === "monmotdepasse") {
-                document.getElementById("content").style.display = "block";
-                document.getElementById("locked").style.display = "none";
-            } else {
-                alert("Mot de passe incorrect !");
-                window.location.reload(); // Recharge la page si le mot de passe est incorrect
-            }
+    <title>Accès protégé</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1e1e1e;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-    </script>
-</head>
-<body onload="checkPassword()">
-    <div id="locked" style="display: block;">
-        <h1>Accès protégé</h1>
-        <p>Veuillez entrer le mot de passe pour continuer.</p>
-    </div>
 
-    <div id="content" style="display: none;">
-        <h1>Bienvenue sur mon site !</h1>
-        <p>Ceci est le contenu protégé par mot de passe.</p>
-    </div>
+        .container {
+            background-color: #2c2c2c;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            text-align: center;
+            width: 320px;
+            transition: all 0.3s ease;
+            opacity: 1;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 1rem;
+            color: #e0e0e0;
+        }
+
+        input[type="password"] {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+            background-color: #3a3a3a;
+            color: #fff;
+            font-size: 16px;
+            outline: none;
+            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="password"]:focus {
+            background-color: #4a4a4a;
+        }
+
+        .btn {
+            background-color: #6200ea;
+            color: #fff;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            box-shadow: 0 4px 8px rgba(98, 0, 234, 0.3);
+        }
+
+        .btn:hover {
+            background-color: #3700b3;
+            box-shadow: 0 6px 12px rgba(98, 0, 234, 0.5);
+        }
+
+        .hidden {
+            display: none;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+    </style>
+</head>
+<body>
+
+<div id="login" class="container">
+    <h1>Mot de passe requis</h1>
+    <input type="password" id="password" placeholder="Entrez le mot de passe" />
+    <button class="btn" onclick="checkPassword()">Accéder</button>
+</div>
+
+<div id="content" class="hidden">
+    <h1>Bienvenue sur mon site !</h1>
+    <p>Ceci est le contenu protégé.</p>
+</div>
+
+<script>
+    function checkPassword() {
+        const password = document.getElementById("password").value;
+        if (password === "monmotdepasse") {
+            document.getElementById("login").style.display = "none";
+            document.getElementById("content").classList.remove("hidden");
+            document.getElementById("content").style.opacity = 1;
+        } else {
+            alert("Mot de passe incorrect !");
+        }
+    }
+</script>
+
 </body>
 </html>
