--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accès protégé</title>
+    <title>Page de Connexion</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1e1e1e;
-            color: #fff;
+            background-color: #f4f4f9;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,65 +16,154 @@
         }
 
         .container {
-            background-color: #2c2c2c;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            text-align: center;
-            width: 320px;
-            transition: all 0.3s ease;
+            display: flex;
+            width: 800px;
+            height: 400px;
+            background-color: #fff;
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
         }
 
-        h1 {
-            font-size: 24px;
-            margin-bottom: 1rem;
-            color: #e0e0e0;
-        }
-
-        input[type="password"] {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            background-color: #3a3a3a;
+        .left-side {
+            background-color: #5c8df6;
             color: #fff;
+            padding: 40px;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+        }
+
+        .left-side h1 {
+            font-size: 32px;
+            margin-bottom: 10px;
+        }
+
+        .left-side p {
+            font-size: 16px;
+            margin-bottom: 20px;
+            opacity: 0.9;
+        }
+
+        .left-side .btn-register {
+            padding: 12px 24px;
+            background-color: transparent;
+            color: #fff;
+            border: 2px solid #fff;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            font-size: 16px;
+        }
+
+        .left-side .btn-register:hover {
+            background-color: #fff;
+            color: #5c8df6;
+        }
+
+        .right-side {
+            padding: 40px;
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .right-side h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .input-group {
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 12px 16px;
+            padding-left: 40px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
             font-size: 16px;
             outline: none;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
-            transition: background-color 0.3s ease;
+            transition: border-color 0.3s;
         }
 
-        input[type="password"]:focus {
-            background-color: #4a4a4a;
+        .input-group input:focus {
+            border-color: #5c8df6;
         }
 
-        .btn {
-            background-color: #6200ea;
-            color: #fff;
+        .input-group i {
+            position: absolute;
+            left: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #aaa;
+            font-size: 18px;
+        }
+
+        .btn-login {
             padding: 12px;
+            background-color: #5c8df6;
+            color: #fff;
             border: none;
             border-radius: 8px;
             cursor: pointer;
             width: 100%;
             font-size: 16px;
             transition: background-color 0.3s ease;
-            box-shadow: 0 4px 8px rgba(98, 0, 234, 0.3);
         }
 
-        .btn:hover {
-            background-color: #3700b3;
-            box-shadow: 0 6px 12px rgba(98, 0, 234, 0.5);
+        .btn-login:hover {
+            background-color: #4a76d4;
+        }
+
+        .forgot-password {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #5c8df6;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .forgot-password:hover {
+            color: #4a76d4;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Mot de passe requis</h1>
-    <input type="password" id="password" placeholder="Entrez le mot de passe" />
-    <button class="btn" onclick="checkPassword()">Accéder</button>
+    <!-- Partie gauche -->
+    <div class="left-side">
+        <h1>Hello, Welcome!</h1>
+        <p>Pour accéder au site, entrez le mot de passe correct.</p>
+        <button class="btn-register" onclick="alert('Pas encore disponible 😎')">Register</button>
+    </div>
+
+    <!-- Partie droite -->
+    <div class="right-side">
+        <h2>Connexion</h2>
+        <div class="input-group">
+            <i class="fas fa-lock"></i>
+            <input type="password" id="password" placeholder="Mot de passe" />
+        </div>
+        <button class="btn-login" onclick="checkPassword()">Se connecter</button>
+        <div class="forgot-password" onclick="alert('Mot de passe oublié ? 😅')">
+            Mot de passe oublié ?
+        </div>
+    </div>
 </div>
+
+<!-- Font Awesome pour les icônes -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <script>
     function checkPassword() {
