--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     function checkPassword() {
         const password = document.getElementById("password").value;
         if (password === "monmotdepasse") {
-            window.location.href = "index.html"; // Redirige vers la page principale
+            window.location.href = "Text.html"; // Redirige vers la page principale
         } else {
             alert("Mot de passe incorrect !");
         }
