--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
 
         .container {
@@ -23,6 +24,14 @@
             border-radius: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             overflow: hidden;
+            opacity: 1;
+            transform: translateY(0);
+            transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+
+        .container.fade-out {
+            opacity: 0;
+            transform: translateY(-50px);
         }
 
         .left-side {
@@ -113,7 +122,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container" id="container">
     <!-- Partie gauche -->
     <div class="left-side">
         <h1>Bienvenue !</h1>
@@ -134,8 +143,12 @@
 <script>
     function checkPassword() {
         const password = document.getElementById("password").value;
-        if (password === "monmotdepasse") {
-            window.location.href = "Text.html"; // Redirige vers la page principale
+        if (password === "Ambre") {
+            const container = document.getElementById("container");
+            container.classList.add("fade-out"); // Lance l'animation
+            setTimeout(() => {
+                window.location.href = "./Text.html"; // Redirige après l'animation
+            }, 500);
         } else {
             alert("Mot de passe incorrect !");
         }
