--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('1000000814.jpg') no-repeat center center/cover;
+            background: url('https://imgur.com/a/1KKtw5C') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
