--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: flex;
             width: 800px;
             height: 400px;
-            background-color: rgba(255, 255, 255, 0.2);
+            background-color: rgba(255, 255, 255, 0.85); /* Moins de transparence */
             border-radius: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             overflow: hidden;
@@ -30,6 +30,7 @@
             transition: opacity 0.5s ease, transform 0.5s ease;
             backdrop-filter: blur(10px);
         }
+
 
         .container.fade-out {
             opacity: 0;
