--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- Partie gauche -->
     <div class="left-side">
         <h1>Bienvenue !</h1>
-        <p>Veuillez entrer le mot de passe pour continuer.</p>
+        <p>Le mot de passe, c'est ton prénom avec la première lettre en majuscule. Si tu entres ton nom et que ça ne marche pas, c'est que le message qui se trouve derrière ce site ne t'est pas destiné.</p>
     </div>
 
     <!-- Partie droite -->
