--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('./images/background.jpg') no-repeat center center/cover;
+            background: url('./images/background.jpg') no-repeat center center/cover, 
+                        url('./images/casca.png') repeat;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,6 +16,8 @@
             margin: 0;
             overflow: hidden;
             backdrop-filter: blur(0px);
+        }
+
         }
 
         .container {
