--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('./images/background.jpg') no-repeat center center/cover, 
-                        url('./images/casca.png') repeat;
+            background: url('./images/background.jpg') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
