--- a/index.html
+++ b/index.html
@@ -14,25 +14,22 @@
             height: 100vh;
             margin: 0;
             overflow: hidden;
-            backdrop-filter: blur(0px);
-        }
-
+            backdrop-filter: blur(4px);
         }
 
         .container {
             display: flex;
             width: 800px;
             height: 400px;
-            background-color: rgba(255, 255, 255, 0.80); /* Moins de transparence */
+            background-color: rgba(255, 255, 255, 0.85);
             border-radius: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             opacity: 1;
             transform: translateY(0);
             transition: opacity 0.5s ease, transform 0.5s ease;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(0px);
         }
-
 
         .container.fade-out {
             opacity: 0;
@@ -158,7 +155,7 @@
             const container = document.getElementById("container");
             container.classList.add("fade-out"); // Lance l'animation
             setTimeout(() => {
-                window.location.href = "./Text.html"; // Redirige après l'animation
+                window.location.href = "./index.html"; // Redirige après l'animation
             }, 500);
         } else {
             alert("Mot de passe incorrect !");
