--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: 100vh;
             margin: 0;
             overflow: hidden;
-            backdrop-filter: blur(4px);
+            backdrop-filter: blur(1px);
         }
 
         .container {
@@ -155,7 +155,7 @@
             const container = document.getElementById("container");
             container.classList.add("fade-out"); // Lance l'animation
             setTimeout(() => {
-                window.location.href = "./index.html"; // Redirige après l'animation
+                window.location.href = "./Text.html"; // Redirige après l'animation
             }, 500);
         } else {
             alert("Mot de passe incorrect !");
