--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Mais d'abord, quel est ton prénom ?</p>
         
         <p style="font-size: 0.8em; color: #db2777; margin-top: -10px;">
-            (Indice : La première lettre est une majuscule)
+            (La première lettre est en majuscule)
         </p>
         
         <input type="text" id="passwordInput" placeholder="Ton prénom...">
