--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>J'ai écrit quelque chose pour toi...</p>
         <p>Mais d'abord, quel est ton prénom ?</p>
         
-        <p style="font-size: 0.8em; color: #db2777; margin-top: -10px;">
+        <p class="hint-message" style="font-size: 0.9em; margin-top: -5px;">
             (La première lettre est en majuscule)
         </p>
         
