--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Mais d'abord, quel est ton prénom ?</p>
         
         <p class="hint-message" style="font-size: 0.9em; margin-top: -5px;">
-            (La première lettre est en majuscule)
+            (La première lettre doit être en majuscule)
         </p>
         
         <input type="text" id="passwordInput" placeholder="Ton prénom...">
