Add avatar image to menu.html
Added an avatar image to the menu page.

--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <img src="images/avatar.png" alt="Nous" class="avatar-img">
+        
         <h1>💌 Mes lettres pour toi</h1>
         <p>Choisis un moment...</p>
         
