--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
         <p>Choisis un moment...</p>
         
         <div class="letter-list">
-            <a href="lettre1.html" class="letter-btn">Lettre N°1: Mon Souhait</a>
+            <a href="lettre1.html" class="letter-btn">Lettre N°1</a>
             <a href="lettre2.html" class="letter-btn">SOON...</a>
             <a href="lettre3.html" class="letter-btn">SOON...</a>
             <a href="lettre4.html" class="letter-btn">SOON...</a>
