--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <img src="images/avatar.png" alt="Nous" class="avatar-img">
         
         <h1>💌 Mes lettres pour toi</h1>
-        <p>Choisis un moment...</p>
+        <p>Choisis une lettre...</p>
         
         <div class="letter-list">
             <a href="lettre1.html" class="letter-btn">Lettre N°1</a>
