--- a/lettres/lettre1.html
+++ b/lettres/lettre1.html
@@ -50,7 +50,7 @@
             </p>
             
             <div class="signature">
-                Ton copain
+                Rachid
             </div>
         </div>
     </div>
