--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="login-container">
         <h1>❤️ Bienvenue ❤️</h1>
         <p>J'ai écrit quelque chose pour toi...</p>
         <p>Mais d'abord, quel est ton prénom ?</p>
@@ -18,7 +18,7 @@
         
         <input type="text" id="passwordInput" placeholder="Ton prénom...">
         <button onclick="checkPassword()">Entrer</button>
-        <p id="errorMessage" style="color: red; display: none;">Ce n'est pas le bon prénom !</p>
+        <p id="errorMessage" style="color: #e11d48; display: none; margin-top: 10px;">Ce n'est pas le bon prénom !</p>
     </div>
 
     <script>
