--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
         <p>Choisis une lettre...</p>
         
         <div class="letter-list">
-            <a href="lettres/lettre1.html" class="letter-btn">Lettre N°1 : Lettre N°1 : L'écho de mon cœur 💓</a>
+            <a href="lettres/lettre1.html" class="letter-btn">Lettre N°1 : L'écho de mon cœur 💓</a>
             <a href="lettre2.html" class="letter-btn">SOON...</a>
             <a href="lettre3.html" class="letter-btn">SOON...</a>
             <a href="lettre4.html" class="letter-btn">SOON...</a>
