--- a/lettres/lettre1.html
+++ b/lettres/lettre1.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lettre 1</title>
     <link rel="stylesheet" href="../style.css">
+    
+    <script>
+        // On vérifie si le ticket est là
+        if (!sessionStorage.getItem("access_granted")) {
+            // S'il n'est pas là, on renvoie à l'accueil (on remonte d'un dossier avec ../)
+            window.location.href = "../index.html";
+        }
+    </script>
     <style>
         .text-content {
             text-align: justify;
@@ -50,7 +58,7 @@
             </p>
             
             <div class="signature">
-                Rachid
+                Ton copain
             </div>
         </div>
     </div>
