--- a/lettres/lettre1.html
+++ b/lettres/lettre1.html
@@ -5,14 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lettre 1</title>
     <link rel="stylesheet" href="../style.css">
-    
-    <script>
-        // On vérifie si le ticket est là
-        if (!sessionStorage.getItem("access_granted")) {
-            // S'il n'est pas là, on renvoie à l'accueil (on remonte d'un dossier avec ../)
-            window.location.href = "../index.html";
-        }
-    </script>
     <style>
         .text-content {
             text-align: justify;
@@ -58,7 +50,7 @@
             </p>
             
             <div class="signature">
-                Ton copain
+                Rachid
             </div>
         </div>
     </div>
