Refactor card structure and update letter links

--- a/menu.html
+++ b/menu.html
@@ -15,16 +15,15 @@
 <body>
     <div class="container">
         
-        <div class="inner-card">
+        <div class="white-card">
             
-            <div class="header-content">
-                <img src="images/avatar.png" alt="Nous" class="avatar-img">
-                <h1>💌 Mes lettres pour toi</h1>
-                <p>Choisis une lettre...</p>
-            </div>
+            <img src="images/avatar.png" alt="Nous" class="avatar-img">
+            <h1>💌 Mes lettres pour toi</h1>
+            <p>Choisis une lettre...</p>
 
-            <div class="letter-list">
-                <a href="lettres/lettre1.html" class="letter-btn">Lettre N°1 : Un Rêve Silencieux 🌙</a>
+            <div class="scroll-area">
+                <a href="lettres/lettre1.html" class="letter-btn">Lettre N°1 : L'écho de mon cœur 💓</a>
+                <a href="#" class="letter-btn">SOON...</a>
                 <a href="#" class="letter-btn">SOON...</a>
                 <a href="#" class="letter-btn">SOON...</a>
                 <a href="#" class="letter-btn">SOON...</a>
