--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,11 @@
         <div class="white-card">
             
             <img src="images/avatar.png" alt="Nous" class="avatar-img">
+            
+            <div class="couple-container">
+                <img src="images/papier.png" alt="Couple" class="couple-drawing">
+            </div>
+
             <h1>💌 Mes lettres pour toi</h1>
             <p>Choisis une lettre...</p>
 
