--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
         }
     </script>
 </head>
-<body>
+<body class="fond-photos">
     <div class="container">
         
         <div class="white-card">
