--- a/lettres/lettre1.html
+++ b/lettres/lettre1.html
@@ -95,14 +95,14 @@
             color: #be123c;
         }
 
-        /* --- NOUVEAU : STYLE DE LA DATE --- */
+        /* --- STYLE DE LA DATE --- */
         .date-line {
-            text-align: right;      /* Aligné à droite comme la signature */
-            font-size: 0.8em;       /* Plus petit */
-            color: #881337;         /* Couleur bordeaux discret */
-            font-style: italic;     /* En italique */
-            margin-top: 5px;        /* Un petit espace après la signature */
-            opacity: 0.8;           /* Légèrement transparent */
+            text-align: left;       /* C'EST ICI LE CHANGEMENT : À gauche ! */
+            font-size: 0.8em;       
+            color: #881337;         
+            font-style: italic;     
+            margin-top: 20px;       /* Un peu plus d'espace pour séparer */
+            opacity: 0.8;           
         }
     </style>
 </head>
